--- a/opdracht/style.css
+++ b/opdracht/style.css
@@ -15,3 +15,13 @@ h2 {
     width: 160px;
     height: 30px;
 }
+#datum-tijd {
+    width: 403px;
+}
+#e-mail {
+    width: 400px;
+}
+
+#telefoonnummer {
+    width: 400px;
+}
